--- a/Calendar/CurrentCalendar.html
+++ b/Calendar/CurrentCalendar.html
@@ -78,17 +78,25 @@
 
         <div class="parent">
 
-        <div class="move">
           <div class="dropdown" style="float:right;">
-            <button onclick="dropDown()" class="dropbtn">Change Month</button>
+            <button onclick="dropDown()" class="dropbtn">Major Events</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="SeptemberCalendar.html">September</a>
-              <a href="OctoberCalendar.html">October</a>
+              <a href="CurrentCalendar.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
            </div>
          </div>
-        </div>
+
+          <div class="dropdown2" style="float:right;">
+            <button onclick="dropDown2()" class="dropbtn2">Club Meetings</button>
+            <div id="myDropdown2" class="dropdown2-content">
+              <a href="ClubCurrentCalendar.html">October</a>
+              <a href="ClubNovemberCalendar.html">November</a>
+              <a href="ClubDecemberCalendar.html">December</a>
+           </div>
+         </div>
+
+
 
 
         <div class = "containerRim"></div>
@@ -96,7 +104,7 @@
         <div class="container1"  id="yearCountDown"></div>
         <div class="container2" id="breakCountDown"></div>
         <div class = "featuredSportSplash">
-          <p> example text</p>
+          <p> 🦃</p>
         </div>
 
 
@@ -227,6 +235,12 @@
         <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
         </div>
 
+        <div class="eventContainerSixteen"> </div>
+        <div class="eventContainerSeventeen"> </div>
+        <div class="eventContainerEighteen"> </div>
+        <div class="eventContainerNineteen"> </div>
+        <div class="eventContainerTwenty"> </div>
+
 <div class="fontSize">
 <button onclick="document.getElementById('id01').style.display='block'" class="button button1">
 h
@@ -240,7 +254,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>event</p>
+          <p>None</p>
         </font>
       </div>
     </div>
@@ -258,7 +272,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Event2</p>
+          <p>None</p>
         </font>
       </div>
     </div>
@@ -277,7 +291,8 @@ h
       <div class="w3-container">
         <font color="black">
           <p> Leadership Retreat at Connor Prairie at 8:00am- 2:00pm </p>
-          <p>  Soccer: Boys JV Match at  Greenfield-Central High School at 6:00pm </p>
+          <hr>
+          <p> Soccer: Boys JV Match at  Greenfield-Central High School at 6:00pm </p>
           <p> Volleyball: Girls Freshman Match at Mount Vernon High School at 6:00pm </p>
           <p> Volleyball: Girls JV Match at Mount Vernon High School at 6:00pm </p>
           <p> Unified Football: Varsity Game at FHS FOOTBALL STADIUM at 6:30pm </p>
@@ -304,6 +319,7 @@ h
          <p> College Visit: Bellarmine University in CCA at 9:30 AM </p>
    <p> College Visit: St. Johns College in CCA at 12:00 PM </p>
    <p> College Visit: University of Southern Indiana in CCA at 1:00 PM </p>
+   <hr>
    <p> Tennis: Boys Varsity IHSAA Sectionals at HSE High School at 4:30pm </p>
    <p> Soccer: Girls JV Match at Guerin Catholic High School at 5:30pm </p>
    <p> Soccer: Girls Varsity Match at Guerin Catholic High School at 7:00pm </p>
@@ -329,6 +345,7 @@ h
    <p> College Visit: Indiana Wesleyan University in CCA at 12:00 PM </p>
    <p> College Visit: Amherst College in CCA at 1:00 PM </p>
    <p> College Visit: University of Iowa in CCA at 2:00 PM </p>
+   <hr>
   <p> Tennis: Boys Varsity IHSAA Sectionals at HSE High School at 4:30pm </p>
   <p> Unified Football: Varsity Game at HSE High School at 5:30pm </p>
   <p> Soccer: Boys Freshman Match at Franklin Central High School at 6:00pm </p>
@@ -352,6 +369,7 @@ h
           <p> 9 week exams/First Grading Period Ends </p>
           <p> College Visit: University of St. Francis in CCA at 8:30 AM </p>
   <p> College Visit: Purdue Polytechnic Institute, West Lafayette in CCA at 2:00 PM </p>
+  <hr>
   <p> Football: Varsity Game in Fishers High School at 7:00pm</p>
   <p> Football: Varsity Game at FHS FOOTBALL STADIUM at 7:00pm <font color= "red"> (Senior Night) </font> </p>
         </font>
@@ -395,7 +413,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> none </p>
+          <p> None </p>
         </font>
       </div>
     </div>
@@ -432,6 +450,9 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
+          <p> College Visit: University of Toledo in the CCA at 8:30 AM </p>
+          <p> College Visit: University of Cincinnati in the CCA at 12:00 PM </p>
+          <hr>
           <p> Cheer Winter Call Out Metting in Cafe A at 3:00pm- 4:00pm </p>
           <p> Volleyball: Girls Freshman and JV Match at Yorktown High School at 6:00pm </p>
           <p> Soccer: Girls Varsity IHSAA Sectionals at HSE High School at 7:15pm </p>
@@ -453,6 +474,11 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
+          <p> College Visit: Tufts University in the CCA at 8:30 AM </p>
+          <p> College Visit: John Hopkins University in the CCA at 12:00 PM </p>
+          <p> College Visit: Belmont University in the CCA at 1:00 PM </p>
+          <p> College Visit: Marian University in the CCA at 2:00 PM </p>
+          <hr>
           <p>Soccer: Boys Varsity IHSAA Sectionals at  White River Elementary at 5:30pm</p>
           <p> Lacrosse Girls Call Out Meeting at Cafe A at 6:00pm- 8:00pm</p>
           <p> Rugby Girls Call Out Meeting at LGI Room at 6:00pm- 7:30pm </p>
@@ -475,6 +501,9 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
+          <p> College Visit: University of Alabama in the CCA at 12:00 PM </p>
+          <p> College Visit: Grace College in the CCA at 1:00 PM </p>
+          <hr>
           <p> Volleyball: Girls Freshman Match at FHS AUX COURT 1 at 5:30pm </p>
           <p> Volleyball: Girls JV Match at FHS GYM - VARSITY at 5:30pm </p>
           <p> Volleyball: Girls Varsity Match at FHS GYM - VARSITY at 7:00pm <font color= "red"> Senior Night </font> </p>
@@ -495,6 +524,8 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
+          <p> College Visit: University of Saint Francis in the CCA at 9:30 AM </p>
+          <hr>
           <p>Football: Varsity Game at Westfield High School at 7:00pm</p>
         </font>
       </div>
@@ -517,7 +548,7 @@ h
           <p> Football: Freshman Game at Westfield High School at 10:00am </p>
           <p> Football: JV Game at FHS FOOTBALL STADIUM at 10:00am </p>
           <p> Volleyball: Girls JV Invitational HSE High School at 10:00am </p>
-          <p> SPORTS Knight Football Games at FHS Football Stadium at 1:00pm- 4:00pm </p>
+          <p> Knight Football Games at FHS Football Stadium at 1:00pm- 4:00pm </p>
           <p> Soccer: Girls Varsity IHSAA Sectionals at HSE High School at 2:00pm </p>
           <p> Soccer: Boys Varsity IHSAA Sectionals at White River Elementary at 7:00pm </p>
         </font>
@@ -574,6 +605,7 @@ h
       <div class="w3-container">
         <font color="black">
           <p><font color="orange"> Fall Break </font></p>
+          <hr>
           <p>Volleyball: Girls Varsity IHSAA Sectionals at Noblesville High School (time: TBD)</p>
         </font>
       </div>
@@ -611,6 +643,7 @@ h
       <div class="w3-container">
         <font color="black">
           <p><font color="orange"> Fall Break </font></p>
+          <hr>
           <p> Volleyball: Girls Varsity IHSAA Sectionals at Noblesville High School (time:TBD)</p>
         </font>
       </div>
@@ -630,6 +663,7 @@ h
       <div class="w3-container">
         <font color="black">
             <p><font color="orange"> Fall Break </font></p>
+            <hr>
             <p> Football: Varsity Game at FHS FOOTBALL STADIUM at 7:00pm </p> 
         </font>
       </div>
@@ -707,7 +741,8 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p> College Visit: University of Louisville in the CCA at 8:30 AM </p>
+          <p> College Visit: Spalding University in the CCA at 12:00 PM </p>
         </font>
       </div>
     </div>
@@ -725,6 +760,10 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
+          <p> College Visit: Johnson & Wales University in the CCA at 8:30 AM </p>
+          <p> College Visit: Saint Mary's College in the CCA at 12:00 PM </p>
+          <p> College Visit: Muskingum University in the CCA at 2:00 PM </p>
+          <hr>
           <p>Rugby Boys Call Out Meeting in Cafe A at 6:00pm- 8:00pm</p>
           <p> IB Night in Cafe B, Cafe C - CCA Commons at 7:00pm- 9:00pm </p>
         </font>
@@ -744,7 +783,10 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p> College Visit: Indiana Tech in the CCA at 8:30 AM </p>
+          <p> College Visit: Calvin University in the CCA at 9:30 AM </p>
+          <p> College Visit: University of Illinois at Chicago in the CCA at 12:00 PM </p>
+          <p> College Visit: Williams College in the CCA at 1:00 PM </p>
         </font>
       </div>
     </div>
@@ -762,6 +804,8 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
+          <p> College Visit: Syracruse University in the CCA at 1:00 PM </p>
+          <hr>
           <p>Marching Band at Lucas Oil Stadium
 Bands of America Indy Super Regional Championship - PRELIMS (Time:TBD)</p>
         </font>
@@ -839,6 +883,7 @@ h
       <div class="w3-container">
         <font color="black">
           <p>RJH Camp Tecumseh</p>
+          <p> College Visit: Saint Louis University in the CCA at 12:00 PM </p>
           <p>All Treats No Tricks in CCA Commons at CCA Commons </p>
         </font>
       </div>
@@ -859,6 +904,8 @@ h
         <font color="black">
           <p>RJH Camp Tecumseh</p>
           <p> PSAT </p>
+          <p> College Visit: Hope College in the CCA at 2:00 PM </p>
+          <hr>
           <p> Silver Shadows - Show Choir Season Tech Crew Callout Meeting at F132 at 3:30pm- 4:30pm </p>
           <p> Basketball: Girls Varsity Scrimmage at FHS GYM - VARSITY at 6:00pm </p>
         </font>
@@ -898,7 +945,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Event34</p>
+          <p>None</p>
         </font>
       </div>
     </div>
@@ -916,7 +963,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Event35</p>
+          <p>None</p>
         </font>
       </div>
     </div>
@@ -1164,6 +1211,26 @@ window.onclick = function(event) {
     }
   }
 }
+
+
+function dropDown2() {
+  document.getElementById("myDropdown2").classList.toggle("show2");
+}
+
+// Close the dropdown menu if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn2')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content2");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show2')) {
+        openDropdown.classList.remove('show2');
+      }
+    }
+  }
+}
+
 
 // Get the modal
 var modal = document.getElementById('id01');
