--- a/Calendar/OctoberCalendar.html
+++ b/Calendar/OctoberCalendar.html
@@ -27,7 +27,7 @@
           <div class="dropdown" style="float:right;">
             <button onclick="dropDown()" class="dropbtn">Change Month</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="SeptemberCalendar.html">September</a>
+              <a href="CurrentCalendar.html">September</a>
               <a href="OctoberCalendar.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
@@ -138,13 +138,13 @@ h
 h
 </button>
 <div id="eventContainerFour">
-   <p> College Visit: Bellarmine University in CCA at 9:30 AM </p>
+   
+</div><p> College Visit: Bellarmine University in CCA at 9:30 AM </p>
    <p> College Visit: St. Johns College in CCA at 12:00 PM </p>
    <p> College Visit: University of Southern Indiana in CCA at 1:00 PM </p>
    <p> Tennis: Boys Varsity IHSAA Sectionals in Hamilton Southeastern High School - TBD </p>
    <p> Soccer: Girls JV Match in Guerin Catholic High School at 5:30pm </p>
    <p> Soccer: Girls Varsity Match in Guerin Catholic High School at 7:00pm</p>
-</div>
 
 <button class= "button button5" onclick="displayEventsFive()">
 h
