--- a/Calendar/ClubCurrentCalendar.html
+++ b/Calendar/ClubCurrentCalendar.html
@@ -78,17 +78,25 @@
 
         <div class="parent">
 
-        <div class="move">
           <div class="dropdown" style="float:right;">
-            <button onclick="dropDown()" class="dropbtn">Change Month</button>
+            <button onclick="dropDown()" class="dropbtn">Major Events</button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="SeptemberCalendar.html">September</a>
-              <a href="OctoberCalendar.html">October</a>
+              <a href="CurrentCalendar.html">October</a>
               <a href="NovemberCalendar.html">November</a>
               <a href="DecemberCalendar.html">December</a>
            </div>
          </div>
-        </div>
+
+          <div class="dropdown2" style="float:right;">
+            <button onclick="dropDown2()" class="dropbtn2">Club Meetings</button>
+            <div id="myDropdown2" class="dropdown2-content">
+              <a href="ClubCurrentCalendar.html">October</a>
+              <a href="ClubNovemberCalendar.html">November</a>
+              <a href="ClubDecemberCalendar.html">December</a>
+           </div>
+         </div>
+
+
 
 
         <div class = "containerRim"></div>
@@ -227,6 +235,12 @@
         <img src="calendar-line-vertical.png" alt="calendar" width="710" height="1195">
         </div>
 
+        <div class="eventContainerSixteen"> </div>
+        <div class="eventContainerSeventeen"> </div>
+        <div class="eventContainerEighteen"> </div>
+        <div class="eventContainerNineteen"> </div>
+        <div class="eventContainerTwenty"> </div>
+
 <div class="fontSize">
 <button onclick="document.getElementById('id01').style.display='block'" class="button button1">
 h
@@ -240,7 +254,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>event</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -258,7 +272,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Event2</p>
+        <p> </p>
         </font>
       </div>
     </div>
@@ -276,13 +290,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Leadership Retreat at Connor Prairie at 8:00am- 2:00pm </p>
-          <p>  Soccer: Boys JV Match at  Greenfield-Central High School at 6:00pm </p>
-          <p> Volleyball: Girls Freshman Match at Mount Vernon High School at 6:00pm </p>
-          <p> Volleyball: Girls JV Match at Mount Vernon High School at 6:00pm </p>
-          <p> Unified Football: Varsity Game at FHS FOOTBALL STADIUM at 6:30pm </p>
-          <p> Soccer: Boys Varsity Match at Greenfield-Central High School at 7:30pm </p>
-          <p> Volleyball: Girls Varsity Match at Mount Vernon High School at 7:30pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -300,13 +308,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> 9 week exams </p>
-         <p> College Visit: Bellarmine University in CCA at 9:30 AM </p>
-   <p> College Visit: St. Johns College in CCA at 12:00 PM </p>
-   <p> College Visit: University of Southern Indiana in CCA at 1:00 PM </p>
-   <p> Tennis: Boys Varsity IHSAA Sectionals at HSE High School at 4:30pm </p>
-   <p> Soccer: Girls JV Match at Guerin Catholic High School at 5:30pm </p>
-   <p> Soccer: Girls Varsity Match at Guerin Catholic High School at 7:00pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -324,14 +326,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-           <p> 9 Week Exams </p>
-          <p> College Visit: The Ohio State University in CCA at 9:30 AM </p>
-   <p> College Visit: Indiana Wesleyan University in CCA at 12:00 PM </p>
-   <p> College Visit: Amherst College in CCA at 1:00 PM </p>
-   <p> College Visit: University of Iowa in CCA at 2:00 PM </p>
-  <p> Tennis: Boys Varsity IHSAA Sectionals at HSE High School at 4:30pm </p>
-  <p> Unified Football: Varsity Game at HSE High School at 5:30pm </p>
-  <p> Soccer: Boys Freshman Match at Franklin Central High School at 6:00pm </p>
+           <p> </p>
         </font>
       </div>
     </div>
@@ -349,11 +344,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> 9 week exams/First Grading Period Ends </p>
-          <p> College Visit: University of St. Francis in CCA at 8:30 AM </p>
-  <p> College Visit: Purdue Polytechnic Institute, West Lafayette in CCA at 2:00 PM </p>
-  <p> Football: Varsity Game in Fishers High School at 7:00pm</p>
-  <p> Football: Varsity Game at FHS FOOTBALL STADIUM at 7:00pm <font color= "red"> (Senior Night) </font> </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -371,13 +362,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Football: JV Game at Franklin Central High School at 10:00am </p>
-          <p> Volleyball: Girls Freshman Invitational at Bishop Chatard High School at 10:00am </p>
-          <p> Volleyball: Girls Varsity Match at Guerin Catholic High School at 10:00am </p>
-          <p> Marching Band at Bands of America Invitational - Prelims, Finals (time TBD) </p>
-          <p> Volleyball: Girls Varsity Match at Guerin Catholic High School at 12:00pm </p>
-          <p> Unified Football: Varsity IHSAA Sectionals at Noblesville High School at 1:00pm </p>
-          <p> Cross Country: Girls Varsity Nike Valley Twilight at Laverne Gibson Championship Cross Country Course at 6:15pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -395,7 +380,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> none </p>
+          <p> </p>
         </font>
       </div>
     </div>
@@ -413,8 +398,18 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Football: Freshman Game at FHS FOOTBALL STADIUM at 6:00pm </p>
-          <p> Soccer: Boys Varsity IHSAA Sectionals at White River Elementary at 7:00pm </p>
+          <p> Basketball Girls at FHS Gym - Auxiliary Gym 2 at 6:15am- 7:00am </p>
+          <p>  Baseball Victory Challenge at FHS Gym - Auxiliary at 6:30am- 7:15am </p>
+          <p>  GAPP-German Exchange Meeting at LGI Room at 6:45am- 8:00am </p>
+          <p> Class Meeting AP Studio Art at 12:21pm- 1:01pm </p>
+          <p> Swimming at FHS Natatorium West at 2:50pm- 5:30pm </p>
+          <p> Basketball Boys at Fall Limited Contact Dates at FHS Gym at 3:30pm- 5:30pm </p>
+          <p> Fishers Diving Club at FHS Natatorium Diving Well at 4:00pm- 7:00pm </p>
+          <p> CRU at CCA Commons at 5:30pm- 9:00pm </p>
+          <p> Color Guard Practice at Performing Arts LGI at 6:00pm- 9:00pm </p>
+          <p> Boys Travel Basketball Practice at FHS Gym Aux Court 2 at 6:00pm- 7:30pm </p>
+          <p> Boys Travel Basketball Practice at FHS Gym Aux Court 1 at 6:15pm- 9:00pm </p>
+          <p> Baseball Dugout Club Meeting at LGI Room at 7:00pm- 8:30pm </p>
         </font>
       </div>
     </div>
@@ -432,10 +427,8 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Cheer Winter Call Out Metting in Cafe A at 3:00pm- 4:00pm </p>
-          <p> Volleyball: Girls Freshman and JV Match at Yorktown High School at 6:00pm </p>
-          <p> Soccer: Girls Varsity IHSAA Sectionals at HSE High School at 7:15pm </p>
-          <p> Volleyball: Girls Varsity Match at Yorktown High School at 7:30pm </p>
+          <p>FCA at FHS Gym at 6:45am- 7:15am</p>
+          <p> Best Buddies at Cafe A at 7:00am- 7:30am </p>
         </font>
       </div>
     </div>
@@ -453,11 +446,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Soccer: Boys Varsity IHSAA Sectionals at  White River Elementary at 5:30pm</p>
-          <p> Lacrosse Girls Call Out Meeting at Cafe A at 6:00pm- 8:00pm</p>
-          <p> Rugby Girls Call Out Meeting at LGI Room at 6:00pm- 7:30pm </p>
-          <p> Band Concert in FHS Gym at 7:00pm- 9:00pm </p>
-          <p> Soccer: Girls Varsity IHSAA Sectionals at HSE High School at 5:30pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -475,9 +464,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Volleyball: Girls Freshman Match at FHS AUX COURT 1 at 5:30pm </p>
-          <p> Volleyball: Girls JV Match at FHS GYM - VARSITY at 5:30pm </p>
-          <p> Volleyball: Girls Varsity Match at FHS GYM - VARSITY at 7:00pm <font color= "red"> Senior Night </font> </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -495,7 +482,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Football: Varsity Game at Westfield High School at 7:00pm</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -513,13 +500,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Cross Country: Varsity IHSAA Sectionals at Pendleton Heights High School  (time: TBD)</p>
-          <p> Football: Freshman Game at Westfield High School at 10:00am </p>
-          <p> Football: JV Game at FHS FOOTBALL STADIUM at 10:00am </p>
-          <p> Volleyball: Girls JV Invitational HSE High School at 10:00am </p>
-          <p> SPORTS Knight Football Games at FHS Football Stadium at 1:00pm- 4:00pm </p>
-          <p> Soccer: Girls Varsity IHSAA Sectionals at HSE High School at 2:00pm </p>
-          <p> Soccer: Boys Varsity IHSAA Sectionals at White River Elementary at 7:00pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -537,7 +518,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -555,7 +536,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p><font color="orange"> Fall Break </font></p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -573,8 +554,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p><font color="orange"> Fall Break </font></p>
-          <p>Volleyball: Girls Varsity IHSAA Sectionals at Noblesville High School (time: TBD)</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -592,7 +572,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p><font color="orange"> Fall Break </font></p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -610,8 +590,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p><font color="orange"> Fall Break </font></p>
-          <p> Volleyball: Girls Varsity IHSAA Sectionals at Noblesville High School (time:TBD)</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -629,8 +608,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-            <p><font color="orange"> Fall Break </font></p>
-            <p> Football: Varsity Game at FHS FOOTBALL STADIUM at 7:00pm </p> 
+            <p></p> 
         </font>
       </div>
     </div>
@@ -648,12 +626,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> Cross Country: Varsity IHSAA Regionals at Delta High School (Time: TBD)
-          <p> Marching Band at Center Grove High School
-ISSMA Regional Contest (Time: TBD)
-          <p> Volleyball: Girls Varsity IHSAA Sectionals at Noblesville High School (Time: TBD) </p>
-          <p> Football: Freshman Game at FHS FOOTBALL STADIUM at 10:00am </p>
-          <p> Football: JV Game at Zionsville High School at 10:00am </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -671,7 +644,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -689,7 +662,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -707,7 +680,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -725,8 +698,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Rugby Boys Call Out Meeting in Cafe A at 6:00pm- 8:00pm</p>
-          <p> IB Night in Cafe B, Cafe C - CCA Commons at 7:00pm- 9:00pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -744,7 +716,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -762,8 +734,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Marching Band at Lucas Oil Stadium
-Bands of America Indy Super Regional Championship - PRELIMS (Time:TBD)</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -781,10 +752,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Cross Country: Varsity IHSAA Semi-State at New Haven High School (Time:TBD)</p>
-          <p> Marching Band at Lucas Oil Stadium
-Bands of America Indy Super Regional Championship - FINALS (Time: TBD) </p>
-          <p> Knight Football Games at FHS Football Stadium at 1:00pm- 6:00pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -802,7 +770,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>None</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -820,7 +788,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>RJH Camp Tecumseh</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -838,8 +806,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>RJH Camp Tecumseh</p>
-          <p>All Treats No Tricks in CCA Commons at CCA Commons </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -857,10 +824,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>RJH Camp Tecumseh</p>
-          <p> PSAT </p>
-          <p> Silver Shadows - Show Choir Season Tech Crew Callout Meeting at F132 at 3:30pm- 4:30pm </p>
-          <p> Basketball: Girls Varsity Scrimmage at FHS GYM - VARSITY at 6:00pm </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -878,9 +842,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p> <font color ="orange"> H </font> <font color ="black"> A </font> <font color ="orange"> L </font> <font color ="black"> L </font> <font color ="orange"> O </font> <font color ="black"> W </font> <font color ="orange"> E </font> <font color ="black"> E </font> <font color ="orange"> N  🎃 </font> </p>
-          <p> RJH Camp Tecumseh </p>
-          <p> PSAT </p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -898,7 +860,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Event34</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -916,7 +878,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-          <p>Event35</p>
+          <p></p>
         </font>
       </div>
     </div>
@@ -1164,6 +1126,26 @@ window.onclick = function(event) {
     }
   }
 }
+
+
+function dropDown2() {
+  document.getElementById("myDropdown2").classList.toggle("show2");
+}
+
+// Close the dropdown menu if the user clicks outside of it
+window.onclick = function(event) {
+  if (!event.target.matches('.dropbtn2')) {
+    var dropdowns = document.getElementsByClassName("dropdown-content2");
+    var i;
+    for (i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.classList.contains('show2')) {
+        openDropdown.classList.remove('show2');
+      }
+    }
+  }
+}
+
 
 // Get the modal
 var modal = document.getElementById('id01');
