Updated css names in Calendar and deleted useless files
dfhuiaefhp;iahufa'[oehfv'

--- a/Calendar/NovemberCalendar.html
+++ b/Calendar/NovemberCalendar.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.14.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Cherry_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Aqua_Mode_1.0.css">
@@ -611,7 +611,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-            <p>Mid-Term 2nd Grading Period</p> 
+            <p>Mid-Term 2nd Grading Period</p>
         </font>
       </div>
     </div>
