--- a/Calendar/SeptemberCalendar.html
+++ b/Calendar/SeptemberCalendar.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.14.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Cherry_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Aqua_Mode_1.0.css">
@@ -630,7 +630,7 @@ h
       <div class="w3-container">
         <font color="black">
             <p><font color="orange"> Fall Break </font></p>
-            <p> Football: Varsity Game at FHS FOOTBALL STADIUM at 7:00pm </p> 
+            <p> Football: Varsity Game at FHS FOOTBALL STADIUM at 7:00pm </p>
         </font>
       </div>
     </div>
