--- a/Calendar/DecemberCalendar.html
+++ b/Calendar/DecemberCalendar.html
@@ -12,7 +12,7 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="../css/FHSched_V_1.14.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
     <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Cherry_Mode_1.0.css">
     <link rel="stylesheet" href="../css/Aqua_Mode_1.0.css">
@@ -287,7 +287,7 @@ h
       <div class="w3-container">
         <font color="black">
           <p>Basketball: Boys JV Game at Muncie Central High School at 6:00pm</p>
-          <p> Basketball: Boys Varsity Game at Muncie Central High School at 7:30pm </p> 
+          <p> Basketball: Boys Varsity Game at Muncie Central High School at 7:30pm </p>
         </font>
       </div>
     </div>
@@ -601,7 +601,7 @@ h
       </header>
       <div class="w3-container">
         <font color="black">
-            <p></p> 
+            <p></p>
         </font>
       </div>
     </div>
