--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
       <ul id = "sidebar-list">
         <li><a href="">Home</a></li>
         <li><a href="about/">About</a></li>
-        <!--
-        <li><a href="../calendar/">Calendar</a></li>
-        -->
+        <li><a href="../Calendar/">Calendar</a></li>
+
         <li id="add-theme">
           <a role="button" onclick="showAddTheme()" id="a-add-theme">+ Theme</a>
           <a role="button" id="input-theme">
