--- a/Calendar/OctoberCalendar.html
+++ b/Calendar/OctoberCalendar.html
@@ -8,9 +8,13 @@
 
     <!-- dycalendarjs stylesheet -->
     <link href="css/dycalendar.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="css/FHSched_V_1.15a.css">
+    <link rel="stylesheet" href="../css/FHSched_V_1.15a.css">
+    <link rel="stylesheet" href="../css/Dark_Mode_1.0.css">
+    <link rel = "stylesheet" href = "css/FHSchedCalendar_V_1.11.css">
+    <script type="text/javascript" src="../js/FHSched_Base_V_1.7.js"></script>
 </head>
-<body class="dark">
+  <body onload="createThemes()" id="body" class = "dark">
+
    <p class="header">
          <a href="../"> FHSched Calendar </a>
     </p>
