Wednesday's theme and upadted about for josh

--- a/about/index.html
+++ b/about/index.html
@@ -144,7 +144,7 @@
           <div class="team-card">
             <img src="../images/about_images/Ben_Lilley.jpg" alt="">
             <div class="bio">
-              <p>Ben is driven, hard-working, curious, and creative in his unique approaches to solving the problems that arise with back-end development of FHSched. The curiosity leads him down programming rabbit holes that sucks him in until he understands, or until SQL is involved. When he’s not spilling his third cup of coffee on his keyboard, Ben enjoys participating in Destination Imagination, listening to Vampire Weekend, watching The Simpsons, studying chemistry, and making his friends laugh.</p>
+              <p>Ben is driven, hard-working, curious, and creative in his unique approaches to solving the problems that arise with back-end development of FHSched. The curiosity leads him down programming rabbit holes that suck him in until he understands, or until SQL is involved. When he’s not spilling his third cup of coffee on his keyboard, Ben enjoys participating in Destination Imagination, listening to Vampire Weekend, watching The Simpsons, studying chemistry, and making his friends laugh.</p>
             </div>
           </div>
           <h2>Ben Lilley</h2>
@@ -211,7 +211,7 @@
           <div class="team-card">
             <img src="../images/about_images/Vinay_Krishnan.jpg" alt="">
             <div class="bio">
-              <p>Vinay is a hardworking individual that likes to get stuff done. He is a front-end web developer that is a part of the FHSched site. He likes to work on many projects that require both lower and higher level programming. His true passion is computer science and algorithm development. He would like to create a start up that develops cybersecurity technology that involves machine programming like facial recognition and Smart devices.</p>
+              <p>Vinay is a hard-working individual that likes to get stuff done. He is a front-end web developer that is a part of the FHSched site. He likes to work on many projects that require both lower and higher level programming. His true passion is computer science and algorithm development. He would like to create a start up that develops cybersecurity technology that involves machine programming like facial recognition and Smart devices.</p>
             </div>
           </div>
           <h2>Vinay Krishnan</h2>
@@ -219,20 +219,22 @@
         </div>
       </div>
 
-      <!--
+
       <div class="team-space">
         <div class="team">
           <div class="team-card">
-            <img src="../images/about_images/temp_profile.jpg" alt="">
+            <img src="../images/about_images/Josh_Hale.png" alt="">
             <div class="bio">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Josh is a part of the social media team. Always quick to crack a joke, he helps organize events as well as plan social updates to the FHSched Instagram. Planning to major in Computer Science, he spends most of his free time dabbling in 3D modeling and making, haha, funny animations on YouTube. His most famous video, BubberDucky Animated, has over 7,300 views.</p>
+              <a class = "bio-social bio-yt" href="https://www.youtube.com/watch?v=-t_VJznNIhU" target = "_blank">
+              </a>
             </div>
           </div>
           <h2>Josh Hale</h2>
           <h3>Public Relations</h3>
         </div>
       </div>
-    -->
+
     </div>
 
     <p class="bottom-space"></p>
