--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -12,13 +12,33 @@
     <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-icon-144x144.png">
 
-    <link rel="stylesheet" href="../css/Puzzle_1.0.css">
+    <link rel="stylesheet" href="../css/Puzzle_1.1.css">
 
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
   </head>
   <body>
     <div>
-      <img src="../images/Theme_Puzzle.jpg">
+      <p class = "instructions">
+        To unlock a theme: Open the sidebar and click "+ Theme"
+        <br>
+        Then enter and guess the theme name by:
+        <br>
+        Solving the puzzle or asking around school
+      </p>
+      <div class="puzzle">
+        <p class="p-puzzle">
+          All
+          <br>
+          Qualified
+          <br>
+          Umbrellas
+          <br>
+          Assemble
+        </p>
+        <!--
+        <img src="../images/Theme_Puzzle.jpg">
+        -->
+      </div>
       <a href="../">Home</a>
     </div>
   </body>
